--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+boto3==1.12.47
+botocore==1.15.47
+dj-database-url==0.5.0
 Django==1.11.28
 django-forms-bootstrap==3.1.0
+django-storages==1.9.1
+docutils==0.15.2
+jmespath==0.9.5
 Pillow==7.1.1
+psycopg2==2.8.5
 pytz==2019.3
+s3transfer==0.3.3
+stripe==2.46.0
